--- a/_config.yml
+++ b/_config.yml
@@ -1,14 +1,3 @@
 theme: jekyll-theme-cayman
 title: "Concurrent Distributed Dynamic Sized Worker Queue"
-
-# Collections
-collections:
-  proposal:
-    output: true
-    permalink: /:collection/:path/
-  checkpoint:
-    output: true
-    permalink: /:collection/:path/
-  finalreport:
-    output: true
-    permalink: /:collection/:path/
+name: &name "Yunjia Wang, Jianan Dai"
