Modify makefile & pages

--- a/doc/Makefile
+++ b/doc/Makefile
@@ -1,6 +1,6 @@
 all: proposal.pdf
 
-proposal.pdf: metadata.md ../README.md
+proposal.pdf: metadata.md proposal.md
 	pandoc $^ -o $@ --pdf-engine=xelatex
 
 clean:
