Finish checkpoint report and adjust proj structure

--- a/_config.yml
+++ b/_config.yml
@@ -1,3 +1,4 @@
 theme: jekyll-theme-cayman
 title: "Concurrent Distributed Dynamic Sized Worker Queue"
-name: &name "Yunjia Wang, Jianan Dai"
+name: &name "Yunjia Wang, Jiaan Dai"
+exclude: [third_party]
