--- a/doc/Makefile
+++ b/doc/Makefile
@@ -1,6 +1,9 @@
-all: proposal.pdf
+all: proposal.pdf checkpoint.pdf
 
-proposal.pdf: metadata.md proposal.md
+proposal.pdf: proposal_meta.md proposal.md
+	pandoc $^ -o $@ --pdf-engine=xelatex
+
+checkpoint.pdf: checkpoint_meta.md checkpoint.md
 	pandoc $^ -o $@ --pdf-engine=xelatex
 
 clean:
