Update result and prepare final report template

--- a/doc/Makefile
+++ b/doc/Makefile
@@ -1,4 +1,4 @@
-all: proposal.pdf checkpoint.pdf
+all: proposal.pdf checkpoint.pdf final.pdf
 
 proposal.pdf: proposal_meta.md proposal.md
 	pandoc $^ -o $@ --pdf-engine=xelatex
@@ -6,6 +6,8 @@ proposal.pdf: proposal_meta.md proposal.md
 checkpoint.pdf: checkpoint_meta.md checkpoint.md
 	pandoc $^ -o $@ --pdf-engine=xelatex
 
+final.pdf: final_meta.md final.md
+	pandoc $^ -o $@ --pdf-engine=xelatex
+
 clean:
 	rm *.pdf
-
